chore: fix timepicker am pm truncation

--- a/web-components/src/components/timepicker/scss/settings.scss
+++ b/web-components/src/components/timepicker/scss/settings.scss
@@ -1,6 +1,7 @@
 $time-box-width: rem-calc(40);
 $time-box-height: rem-calc(32);
-$am-pm-combobox-width: rem-calc(48);
+$timepicker-right-padding: rem-calc(48);
+$am-pm-combobox-width: rem-calc(44);
 $am-pm-combobox-left-margin: rem-calc(8);
 $am-pm-combobox-side-padding: rem-calc(7);
 $am-pm-combobox-dropdown-max-height: rem-calc(80);
